[package]
name = "plenty-of-fluids"
version = "0.1.0"
authors = ["Matthew Dawson <matthewdawson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
url = "2.1"
sha-1 = "0.8"
curl = "0.4.28"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[dependencies.bencode]
git = "https://github.com/arjantop/rust-bencode.git"
# path = "../../rust-bencode"
