[package]
name = "plenty-of-fluids"
version = "0.1.0"
authors = ["Matthew Dawson <matthewdawson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.1"
sha-1 = "0.8"

[dependencies.bencode]
git = "https://github.com/arjantop/rust-bencode.git"
# path = "../../rust-bencode"
